@@ -83,6 +83,7 @@ from .test_ukraine import *
 from .test_united_arab_emirates import *
 from .test_united_kingdom import *
 from .test_united_states import *
+from .test_uruguay import *
 from .test_venezuela import *
 from .test_vietnam import *
 from .test_zambia import *
