@@ -4,6 +4,7 @@ Version 0.11.3
 Released ?????? ??, ????
 
 - Support for Zambia #495 (engineervix)
+- Support for Uruguay (jemazzeo, dr-p)
 - Removed six dependency (mborsetti)
 - New Zealand updates #499 (36wish)
 - USA, Angola fixes (jusce17)
